# bayesian-segmentation

./: .gitignore  README.md  impl-log.md  impl-plan.md  pyproject.toml
configs/: project_standards.yaml
data/: customer_panel.parquet  trace_partial.nc
notebooks/: 01_eda_and_checks.ipynb  02_feature_engineering.ipynb  03_models.ipynb  03b_divergence_investigation.ipynb  04_results.ipynb
scripts/: create_nb01.py  download_data.py
src/bcs/: data.py  features.py  models.py
tests/: test_data.py  test_features.py
